@startuml
skinparam shadowing false
hide circle
hide methods

class Exam {
  +ID : uint
  +TeacherID : uint
  +Title : string
  +DurationMinutes : int
  +StartTime : *time
  +EndTime : *time
  +ResetAt : *time
  +ReminderSentAt : *time
  +EmailReminder1hSentAt : *time
  +EmailReminderStartSentAt : *time
  +ShuffleQuestions : bool
  +ShowResultsAfter : bool
  +PassingScore : int
  +IsPractice : bool
  +IsDraft : bool
}

class Problem {
  +ID : uint
  +ExamID : *uint
  +IsBank : bool
  +Type : string  ' coding | mcq | written
  +Points : int
  +Difficulty : string
  +TimeLimitMs : int
  +MemoryLimitKb : int
  +OrderIndex : int
  -- coding --
  +StarterCode : text
  -- mcq --
  +Options : jsonb
  +CorrectOptionIDs : jsonb
  +MultipleCorrect : bool
  +Explanation : text
  -- written --
  +MaxWordCount : int
  +Rubric : text
  +RequireManualGrading : bool
}

class TestCase {
  +ID : uint
  +ProblemID : uint
  +Input : text
  +ExpectedOutput : text
  +IsSample : bool
  +Points : int
  +OrderIndex : int
}

class ExamClass {
  +ExamID : uint
  +ClassID : uint
}

class Class {
  +ID : uint
  +TeacherID : uint
  +Name : string
  +InviteCode : string (8)
  +GradesAnnounced : bool
  +PassingThreshold : int
}

Exam "1" *-- "many" Problem
Problem "1" *-- "many" TestCase
Exam "many" -- "many" Class : via ExamClass
@enduml
